refactor all repos and handlers to have a base
